Fix margin spacing issues in CSS

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ section.shape {
 ul.hex, ul.pent {
 	list-style-type: none;
 	padding: 0;
+	margin: 0;
 }
 
 ul.hex > li, ul.pent > li {
@@ -413,6 +414,7 @@ ul.pent .cwrap {
 /********** Sponsors section **********/
 
 #sponsors {
+	margin: 0;
 	margin-left: 350px;
 }
 
